k8s/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menus-admin
  namespace: apptolast-menus-admin-dev
  labels:
    app: menus-admin
    environment: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: menus-admin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: menus-admin
    spec:
      containers:
        - name: menus-admin
          image: apptolast/menus-admin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
