k8s/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menus-admin
  namespace: apptolast-menus-admin-dev
  labels:
    app: menus-admin
spec:
  type: ClusterIP
  selector:
    app: menus-admin
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
